remove old providers preparing the way for the integration with bridge.xyz
